--- a/lab2/Vector/VectorTests/VectorTests.vcxproj.filters
+++ b/lab2/Vector/VectorTests/VectorTests.vcxproj.filters
@@ -22,4 +22,12 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Vector\VectorFunctions.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Vector\stdafx.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
